# spbu_2020_c_homeworks

./: CMakeLists.txt  LICENSE
homework_1/: task_1.c  task_2.c  task_3.c  task_4.c  task_5.c
homework_2/: task_2.1.c  task_2.2.c  task_2.3.c  task_2.4.c  task_2.5.c
homework_3/: task_3.1.c  task_3.2.c
homework_4/: task_4.1.c  task_4.2.c  task_4.3.c
homework_5/: task_5.1.c  task_5.2.c
homework_6/: task_6.1.c
homework_7/: task_7.1.c  task_7.2.c
homework_8/: task_8.1.c
homework_9/: task_9.1.c
test_1/: test_1.1.c  test_1.2.c
test_2/: test_2.1.c  test_2.2.c  test_2.3.c  test_2.3_new.c
test_3/: test_3.1.c  test_3.2.c  test_3.3.c
